--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LCMS - Leave Credit Management System</title>
-    <link rel="stylesheet" href="CSS/index.css">    
+    <link rel="stylesheet" href="CSS/index.css">
+    
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-analytics-compat.js"></script>
+    <!-- Add other Firebase services you may need -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script> -->
 </head>
 <body>
     <div class="container">
@@ -22,6 +29,9 @@
         </div>
     </div>
 
+    <!-- Firebase Initialization -->
+    <script src="js/firebase-init.js"></script>
+    
     <script>
         function redirectToLogin(role) {
             window.location.href = `login.html?role=${role}`;
