--- a/HR_HTML/HR.html
+++ b/HR_HTML/HR.html
@@ -10,7 +10,11 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-analytics-compat.js"></script>
+    
+    <!-- Firebase Initialization -->
+    <script src="../js/firebase-init.js"></script>
 </head>
 <body>
     <!-- Sidebar placeholder that will be filled by the JavaScript -->
@@ -86,7 +90,6 @@
     </div>
     
     <!-- Load sidebar script -->
-    <script src="../js/firebase-init.js"></script>
     <script src="../js/auth-utils.js"></script>
     <script src="../components/sidebar-loader.js"></script>
     <script>
