--- a/SUPERVISOR_HTML/L_history.html
+++ b/SUPERVISOR_HTML/L_history.html
@@ -1,190 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LCMS - Leave History</title>
-    <link rel="stylesheet" href="../CSS/sidebar.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #e6f3f5;
-            display: flex;
-        }
-
-        .sidebar {
-            width: 250px;
-            background: linear-gradient(145deg, #8395a7 0%, #576574 100%);
-            height: 100vh;
-            padding: 20px;
-        }
-
-        .logo {
-            color: #2c3e50;
-            font-size: 32px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            padding: 20px;
-        }
-
-        .campus-name {
-            color: #34495e;
-            font-size: 16px;
-            padding: 10px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .menu-item {
-            background-color: rgba(230, 243, 245, 0.9);
-            margin: 10px 0;
-            padding: 12px 20px;
-            border-radius: 20px;
-            color: #2c3e50;
-            text-decoration: none;
-            display: block;
-            transition: all 0.3s ease;
-        }
-
-        .menu-item:hover {
-            background-color: #fff;
-            transform: translateX(10px);
-        }
-
-        .main-content {
-            flex: 1;
-            padding: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-
-        .history-container {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 1200px;
-        }
-
-        .history-title {
-            background-color: #c7ecee;
-            color: #2c3e50;
-            padding: 15px;
-            text-align: center;
-            border-radius: 15px;
-            margin-bottom: 30px;
-            font-size: 20px;
-            font-weight: 500;
-            text-transform: uppercase;
-        }
-
-        .history-table {
-            width: 100%;
-            border-collapse: separate;
-            border-spacing: 0;
-            margin-top: 20px;
-        }
-
-        .history-table th, 
-        .history-table td {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .history-table th {
-            background-color: #f5f6fa;
-            color: #2c3e50;
-            font-weight: 500;
-            text-transform: uppercase;
-            font-size: 14px;
-        }
-
-        .history-table td {
-            color: #2c3e50;
-            font-size: 14px;
-        }
-
-        .history-table tr:hover {
-            background-color: #f8f9fa;
-        }
-
-        .status-badge {
-            padding: 6px 12px;
-            border-radius: 12px;
-            font-size: 12px;
-            font-weight: 500;
-            text-transform: uppercase;
-            display: inline-block;
-            background-color: #c7ecee;
-            color: #2c3e50;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="../CSS/sidebar.css" />
+    <link rel="stylesheet" href="../CSS/Employee.css" />
+  </head>
+  <body>
     <!-- Sidebar placeholder that will be filled by the JavaScript -->
     <div id="sidebar-placeholder"></div>
 
-    <div class="main-content">
-        <div class="history-container">
-            <div class="history-title">LEAVE HISTORY</div>
-            <table class="history-table">
-                <thead>
-                    <tr>
-                        <th>LEAVE TYPE</th>
-                        <th>START DATE</th>
-                        <th>END DATE</th>
-                        <th>DAYS TAKEN</th>
-                        <th>REASON</th>
-                        <th>DATE APPROVED</th>
-                        <th>STATUS</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Vacation Leave</td>
-                        <td>2025-01-15</td>
-                        <td>2025-01-20</td>
-                        <td>5</td>
-                        <td>Annual family vacation</td>
-                        <td>2025-01-05</td>
-                        <td><span class="status-badge">Completed</span></td>
-                    </tr>
-                    <tr>
-                        <td>Sick Leave</td>
-                        <td>2025-03-10</td>
-                        <td>2025-03-12</td>
-                        <td>2</td>
-                        <td>Medical checkup</td>
-                        <td>2025-03-05</td>
-                        <td><span class="status-badge">Completed</span></td>
-                    </tr>
-                    <tr>
-                        <td>Emergency Leave</td>
-                        <td>2025-05-01</td>
-                        <td>2025-05-01</td>
-                        <td>1</td>
-                        <td>Family matter</td>
-                        <td>2025-05-01</td>
-                        <td><span class="status-badge">Completed</span></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <div class="main-content flex-center">
+      <div class="history-container">
+        <div class="history-title">LEAVE HISTORY</div>
+        <table class="history-table">
+          <thead>
+            <tr>
+              <th>LEAVE TYPE</th>
+              <th>START DATE</th>
+              <th>END DATE</th>
+              <th>DAYS TAKEN</th>
+              <th>REASON</th>
+              <th>DATE APPROVED</th>
+              <th>STATUS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Vacation Leave</td>
+              <td>2025-01-15</td>
+              <td>2025-01-20</td>
+              <td>5</td>
+              <td>Annual family vacation</td>
+              <td>2025-01-05</td>
+              <td><span class="status-badge">Completed</span></td>
+            </tr>
+            <tr>
+              <td>Sick Leave</td>
+              <td>2025-03-10</td>
+              <td>2025-03-12</td>
+              <td>2</td>
+              <td>Medical checkup</td>
+              <td>2025-03-05</td>
+              <td><span class="status-badge">Completed</span></td>
+            </tr>
+            <tr>
+              <td>Emergency Leave</td>
+              <td>2025-05-01</td>
+              <td>2025-05-01</td>
+              <td>1</td>
+              <td>Family matter</td>
+              <td>2025-05-01</td>
+              <td><span class="status-badge">Completed</span></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    
+
     <!-- Load sidebar script -->
     <script src="../components/sidebar-loader.js"></script>
     <script>
-        // Call the loadSidebar function when the page loads
-        document.addEventListener('DOMContentLoaded', function() {
-            loadSidebar('supervisor');
-        });
+      // Call the loadSidebar function when the page loads
+      document.addEventListener("DOMContentLoaded", function () {
+        loadSidebar("supervisor");
+      });
     </script>
-</body>
+  </body>
 </html>
