--- a/SUPERVISOR_HTML/Leaves_request.html
+++ b/SUPERVISOR_HTML/Leaves_request.html
@@ -1,260 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LCMS - Leave Requests</title>
-    <link rel="stylesheet" href="../CSS/sidebar.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #e6f3f5;
-            display: flex;
-        }
-
-        .sidebar {
-            width: 250px;
-            background: linear-gradient(145deg, #8395a7 0%, #576574 100%);
-            height: 100vh;
-            padding: 20px;
-        }
-
-        .logo {
-            color: #2c3e50;
-            font-size: 32px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            padding: 20px;
-        }
-
-        .campus-name {
-            color: #34495e;
-            font-size: 16px;
-            padding: 10px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .menu-item {
-            background-color: rgba(230, 243, 245, 0.9);
-            margin: 10px 0;
-            padding: 12px 20px;
-            border-radius: 20px;
-            color: #2c3e50;
-            text-decoration: none;
-            display: block;
-            transition: all 0.3s ease;
-        }
-
-        .menu-item:hover {
-            background-color: #fff;
-            transform: translateX(10px);
-        }
-
-        .main-content {
-            flex: 1;
-            padding: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-
-        .request-container {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 1200px;
-        }
-
-        .request-title {
-            background-color: #c7ecee;
-            color: #2c3e50;
-            padding: 15px;
-            text-align: center;
-            border-radius: 15px;
-            margin-bottom: 30px;
-            font-size: 20px;
-            font-weight: 500;
-            text-transform: uppercase;
-        }
-
-        .request-table {
-            width: 100%;
-            border-collapse: separate;
-            border-spacing: 0;
-            margin-top: 20px;
-        }
-
-        .request-table th, 
-        .request-table td {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .request-table th {
-            background-color: #f5f6fa;
-            color: #2c3e50;
-            font-weight: 500;
-            text-transform: uppercase;
-            font-size: 14px;
-        }
-
-        .request-table td {
-            color: #2c3e50;
-            font-size: 14px;
-        }
-
-        .request-table tr:hover {
-            background-color: #f8f9fa;
-        }
-
-        .action-buttons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .approve-btn,
-        .reject-btn {
-            padding: 8px 16px;
-            border: none;
-            border-radius: 12px;
-            cursor: pointer;
-            font-size: 12px;
-            font-weight: 500;
-            text-transform: uppercase;
-            transition: all 0.3s ease;
-        }
-
-        .approve-btn {
-            background-color: #c7ecee;
-            color: #2c3e50;
-        }
-
-        .reject-btn {
-            background-color: #ff7675;
-            color: white;
-        }
-
-        .approve-btn:hover {
-            background-color: #a3e4f3;
-        }
-
-        .reject-btn:hover {
-            background-color: #e66767;
-        }
-
-        .status-badge {
-            padding: 6px 12px;
-            border-radius: 12px;
-            font-size: 12px;
-            font-weight: 500;
-            text-transform: uppercase;
-            display: inline-block;
-        }
-
-        .status-pending {
-            background-color: #ffeaa7;
-            color: #b7791f;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="../CSS/sidebar.css" />
+    <link rel="stylesheet" href="../CSS/Employee.css" />
+  </head>
+  <body>
     <!-- Sidebar placeholder that will be filled by the JavaScript -->
     <div id="sidebar-placeholder"></div>
 
-    <div class="main-content">
-        <div class="request-container">
-            <div class="request-title">LEAVE REQUESTS</div>
-            <table class="request-table">
-                <thead>
-                    <tr>
-                        <th>EMPLOYEE NAME</th>
-                        <th>DEPARTMENT</th>
-                        <th>LEAVE TYPE</th>
-                        <th>START DATE</th>
-                        <th>END DATE</th>
-                        <th>DAYS</th>
-                        <th>REASON</th>
-                        <th>STATUS</th>
-                        <th>ACTION</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>John Doe</td>
-                        <td>IT Department</td>
-                        <td>Vacation Leave</td>
-                        <td>2025-06-15</td>
-                        <td>2025-06-20</td>
-                        <td>5</td>
-                        <td>Annual vacation</td>
-                        <td><span class="status-badge status-pending">Pending</span></td>
-                        <td class="action-buttons">
-                            <button class="approve-btn">Approve</button>
-                            <button class="reject-btn">Reject</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Jane Smith</td>
-                        <td>HR Department</td>
-                        <td>Sick Leave</td>
-                        <td>2025-06-10</td>
-                        <td>2025-06-11</td>
-                        <td>2</td>
-                        <td>Medical checkup</td>
-                        <td><span class="status-badge status-pending">Pending</span></td>
-                        <td class="action-buttons">
-                            <button class="approve-btn">Approve</button>
-                            <button class="reject-btn">Reject</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <div class="main-content flex-center">
+      <div class="request-container">
+        <div class="request-title">LEAVE REQUESTS</div>
+        <table class="request-table">
+          <thead>
+            <tr>
+              <th>EMPLOYEE NAME</th>
+              <th>DEPARTMENT</th>
+              <th>LEAVE TYPE</th>
+              <th>START DATE</th>
+              <th>END DATE</th>
+              <th>DAYS</th>
+              <th>REASON</th>
+              <th>STATUS</th>
+              <th>ACTION</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John Doe</td>
+              <td>IT Department</td>
+              <td>Vacation Leave</td>
+              <td>2025-06-15</td>
+              <td>2025-06-20</td>
+              <td>5</td>
+              <td>Annual vacation</td>
+              <td><span class="status-badge status-pending">Pending</span></td>
+              <td class="action-buttons">
+                <button class="approve-btn">Approve</button>
+                <button class="reject-btn">Reject</button>
+              </td>
+            </tr>
+            <tr>
+              <td>Jane Smith</td>
+              <td>HR Department</td>
+              <td>Sick Leave</td>
+              <td>2025-06-10</td>
+              <td>2025-06-11</td>
+              <td>2</td>
+              <td>Medical checkup</td>
+              <td><span class="status-badge status-pending">Pending</span></td>
+              <td class="action-buttons">
+                <button class="approve-btn">Approve</button>
+                <button class="reject-btn">Reject</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const approveButtons = document.querySelectorAll('.approve-btn');
-            const rejectButtons = document.querySelectorAll('.reject-btn');
+      document.addEventListener("DOMContentLoaded", function () {
+        const approveButtons = document.querySelectorAll(".approve-btn");
+        const rejectButtons = document.querySelectorAll(".reject-btn");
 
-            approveButtons.forEach(button => {
-                button.addEventListener('click', function() {
-                    const row = this.closest('tr');
-                    const statusCell = row.querySelector('.status-badge');
-                    statusCell.textContent = 'Approved';
-                    statusCell.style.backgroundColor = '#c7ecee';
-                    statusCell.style.color = '#2c3e50';
-                    this.closest('.action-buttons').remove();
-                });
-            });
-
-            rejectButtons.forEach(button => {
-                button.addEventListener('click', function() {
-                    const row = this.closest('tr');
-                    const statusCell = row.querySelector('.status-badge');
-                    statusCell.textContent = 'Rejected';
-                    statusCell.style.backgroundColor = '#ff7675';
-                    statusCell.style.color = 'white';
-                    this.closest('.action-buttons').remove();
-                });
-            });
+        approveButtons.forEach((button) => {
+          button.addEventListener("click", function () {
+            const row = this.closest("tr");
+            const statusCell = row.querySelector(".status-badge");
+            statusCell.textContent = "Approved";
+            statusCell.style.backgroundColor = "#c7ecee";
+            statusCell.style.color = "#2c3e50";
+            this.closest(".action-buttons").remove();
+          });
         });
+
+        rejectButtons.forEach((button) => {
+          button.addEventListener("click", function () {
+            const row = this.closest("tr");
+            const statusCell = row.querySelector(".status-badge");
+            statusCell.textContent = "Rejected";
+            statusCell.style.backgroundColor = "#ff7675";
+            statusCell.style.color = "white";
+            this.closest(".action-buttons").remove();
+          });
+        });
+      });
     </script>
-    
+
     <!-- Load sidebar script -->
     <script src="../components/sidebar-loader.js"></script>
     <script>
-        // Call the loadSidebar function when the page loads
-        document.addEventListener('DOMContentLoaded', function() {
-            loadSidebar('supervisor');
-        });
+      // Call the loadSidebar function when the page loads
+      document.addEventListener("DOMContentLoaded", function () {
+        loadSidebar("supervisor");
+      });
     </script>
-</body>
+  </body>
 </html>
