--- a/SUPERVISOR_HTML/Edit_profile.html
+++ b/SUPERVISOR_HTML/Edit_profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../CSS/sidebar.css" />
     <link rel="stylesheet" href="../CSS/Employee.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LCMS - Edit Profile</title>
     <!-- Load sidebar script -->
@@ -61,7 +62,7 @@
           <label for="department">DEPARTMENT UNIT</label>
           <input type="text" id="department" name="department" />
         </div>
-        <button type="submit" class="save-button">SAVE CHANGES</button>
+        <button type="submit" class="primary-button">SAVE CHANGES</button>
       </form>
     </div>
   </body>
