--- a/SUPERVISOR_HTML/Request_leave.html
+++ b/SUPERVISOR_HTML/Request_leave.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../CSS/sidebar.css" />
     <link rel="stylesheet" href="../CSS/Employee.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LCMS - Request Leave</title>
   </head>
@@ -68,7 +69,7 @@
           <div id="fileList" class="file-list"></div>
         </div>
 
-        <button type="submit" class="submit-btn">SUBMIT</button>
+        <button type="submit" class="primary-button">SUBMIT</button>
       </form>
     </div>
 
